[project]
name = "b3cotahist"
version = "0.1.1"
description = "Uma biblioteca simples para facilitar a leitura e o parsing do arquivo COTAHIST da B3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "requests>=2.32.3",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
