[tool.poetry]
name = "b3cotahist"
version = "0.1.9"
description = "Biblioteca Python para fetch e leitura do arquivo COTAHIST da B3."
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0.0"
polars = "^1.0.0"
pandas = "^2.0.0"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
